--- a/UI/UnoWCTDataGridSample/WCTTestbed2/WCTTestbed2.Wasm/WCTTestbed2.Wasm.csproj
+++ b/UI/UnoWCTDataGridSample/WCTTestbed2/WCTTestbed2.Wasm/WCTTestbed2.Wasm.csproj
@@ -1,8 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netstandard2.0</TargetFramework>
-    <DefineConstants>$(DefineConstants);__WASM__</DefineConstants>
+		<TargetFramework>net5.0</TargetFramework>
+		<DefineConstants>$(DefineConstants);__WASM__</DefineConstants>
     <NoWarn>NU1701</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)'=='Debug'">
