--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -1,6 +1,6 @@
 jobs:
 - job: VS_Latest
-  timeoutInMinutes: 90
+  timeoutInMinutes: 120
 
   pool:
     vmImage: windows-2019
@@ -26,7 +26,7 @@ jobs:
       msbuildLocationMethod: version
       msbuildVersion: latest
       msbuildArchitecture: x86
-      msbuildArguments: /r /p:Configuration=Release "/p:InformationalVersion=$(GitVersion.InformationalVersion)" /p:AotAssemblies=false /ds
+      msbuildArguments: /r /p:Configuration=Release "/p:InformationalVersion=$(GitVersion.InformationalVersion)" /p:AotAssemblies=false /p:WasmShellILLinkerEnabled=false /ds
       clean: false
       maximumCpuCount: true
       restoreNugetPackages: false
