--- a/UI/UnoEthereumBlockChain/DemoApp/DemoApp/DemoApp.Skia.Wpf/DemoApp.Skia.Wpf.csproj
+++ b/UI/UnoEthereumBlockChain/DemoApp/DemoApp/DemoApp.Skia.Wpf/DemoApp.Skia.Wpf.csproj
@@ -6,8 +6,9 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
-    <PackageReference Include="Uno.UI.Skia.Wpf" Version="3.7.4" />
-    <PackageReference Include="Uno.UI.RemoteControl" Version="3.7.4" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.UI.Skia.Wpf" Version="4.1.9" />
+    <PackageReference Include="Uno.UI.RemoteControl" Version="4.1.9" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.1.9" />
   </ItemGroup>
   <ItemGroup>
     <UpToDateCheckInput Include="..\DemoApp.Shared\**\*.xaml" />
