--- a/UI/UnoEthereumBlockChain/DemoApp/DemoApp/DemoApp.UWP/DemoApp.UWP.csproj
+++ b/UI/UnoEthereumBlockChain/DemoApp/DemoApp/DemoApp.UWP/DemoApp.UWP.csproj
@@ -13,17 +13,17 @@
     <PackageReference Include="Microsoft.Toolkit.Uwp.UI.Controls">
       <Version>7.0.2</Version>
     </PackageReference>
-    <PackageReference Include="Microsoft.UI.Xaml" Version="2.6.1" />
+    <PackageReference Include="Microsoft.UI.Xaml" Version="2.6.2" />
     <PackageReference Include="Nethereum.Web3">
       <Version>3.8.0</Version>
     </PackageReference>
-    <PackageReference Include="Uno.Core" Version="2.4.0" />
     <PackageReference Include="Uno.Material">
-      <Version>1.0.0-dev.788</Version>
+      <Version>1.3.1</Version>
     </PackageReference>
-    <PackageReference Include="Uno.UI" Version="3.8.13" />
+    <PackageReference Include="Uno.UI" Version="4.1.9" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="5.0.0" />
+    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.1.9" />
   </ItemGroup>
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
