--- a/UI/UnoEthereumBlockChain/DemoApp/DemoApp/DemoApp.macOS/DemoApp.macOS.csproj
+++ b/UI/UnoEthereumBlockChain/DemoApp/DemoApp/DemoApp.macOS/DemoApp.macOS.csproj
@@ -74,10 +74,11 @@
       <Version>3.8.0</Version>
     </PackageReference>
     <PackageReference Include="Uno.Material">
-      <Version>1.0.0-dev.788</Version>
+      <Version>1.3.1</Version>
     </PackageReference>
-    <PackageReference Include="Uno.UI" Version="3.8.13" />
-    <PackageReference Include="Uno.UI.RemoteControl" Version="3.8.13" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.UI" Version="4.1.9" />
+    <PackageReference Include="Uno.UI.RemoteControl" Version="4.1.9" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.1.9" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
   </ItemGroup>
