--- a/UI/UnoMaterialSample/UnoMaterialSample.UWP/UnoMaterialSample.Uwp.csproj
+++ b/UI/UnoMaterialSample/UnoMaterialSample.UWP/UnoMaterialSample.Uwp.csproj
@@ -8,15 +8,20 @@
       you need to make sure that the version provided here matches https://github.com/novotnyllc/MSBuildSdkExtras/blob/main/Source/MSBuild.Sdk.Extras/DefaultItems/ImplicitPackages.targets#L11.
       This is not an issue when libraries are referenced through nuget packages. See https://github.com/unoplatform/uno/issues/446 for more details.
       -->
-      <Version>6.2.12</Version>
+      <Version>6.2.13</Version>
     </PackageReference>
-    <PackageReference Include="Uno.Core" Version="2.3.0" />
-    <PackageReference Include="Uno.Material">
-      <Version>1.0.0-dev.780</Version>
+    <PackageReference Include="Microsoft.UI.Xaml" Version="2.7.1" />
+    <PackageReference Include="Uno.Material" Version="1.3.1" />
+    <PackageReference Include="Uno.Toolkit.UI">
+      <Version>1.3.0</Version>
     </PackageReference>
-    <PackageReference Include="Uno.UI" Version="3.8.6" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
+    <PackageReference Include="Uno.Toolkit.UI.Material">
+      <Version>1.3.0</Version>
+    </PackageReference>
+    <PackageReference Include="Uno.UI" Version="4.1.9" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="5.0.0" />
+    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.1.9" />
   </ItemGroup>
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
