--- a/UI/UnoMaterialSample/UnoMaterialSample.macOS/UnoMaterialSample.macOS.csproj
+++ b/UI/UnoMaterialSample/UnoMaterialSample.macOS/UnoMaterialSample.macOS.csproj
@@ -69,13 +69,18 @@
     <Reference Include="System.Memory" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Uno.Material">
-      <Version>1.0.0-dev.780</Version>
+    <PackageReference Include="Uno.Material" Version="1.3.1" />
+    <PackageReference Include="Uno.Toolkit.UI">
+      <Version>1.3.0</Version>
     </PackageReference>
-    <PackageReference Include="Uno.UI" Version="3.8.6" />
-    <PackageReference Include="Uno.UI.RemoteControl" Version="3.8.6" Condition="'$(Configuration)'=='Debug'" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
+    <PackageReference Include="Uno.Toolkit.UI.Material">
+      <Version>1.3.0</Version>
+    </PackageReference>
+    <PackageReference Include="Uno.UI" Version="4.1.9" />
+    <PackageReference Include="Uno.UI.RemoteControl" Version="4.1.9" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.1.9" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
   </ItemGroup>
   <Import Project="..\UnoMaterialSample.Shared\UnoMaterialSample.Shared.projitems" Label="Shared" />
   <ItemGroup>
