--- a/UI/UnoSQLiteOneDriveInvoiceSample/Demo/Demo/Demo.Droid/Properties/AndroidManifest.xml
+++ b/UI/UnoSQLiteOneDriveInvoiceSample/Demo/Demo/Demo.Droid/Properties/AndroidManifest.xml
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="Demo.Demo" android:versionCode="1" android:versionName="1.0" android:installLocation="auto">
-	<uses-sdk android:minSdkVersion="16" android:targetSdkVersion="30" />
+	<uses-sdk android:minSdkVersion="16" android:targetSdkVersion="31" />
 	<application android:label="Demo.Droid">
-		<activity android:name="microsoft.identity.client.BrowserTabActivity" android:configChanges="orientation|screenSize">
+		<activity android:exported="true" android:name="microsoft.identity.client.BrowserTabActivity" android:configChanges="orientation|screenSize">
 			<intent-filter>
 				<action android:name="android.intent.action.VIEW" />
 				<category android:name="android.intent.category.DEFAULT" />
