--- a/UI/UnoSQLiteOneDriveInvoiceSample/Demo/Demo/Demo.UWP/Demo.UWP.csproj
+++ b/UI/UnoSQLiteOneDriveInvoiceSample/Demo/Demo/Demo.UWP/Demo.UWP.csproj
@@ -3,19 +3,19 @@
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <ItemGroup>
     <PackageReference Include="Bogus">
-      <Version>33.1.1</Version>
+      <Version>34.0.2</Version>
     </PackageReference>
     <PackageReference Include="Countries.Standard">
       <Version>1.0.0</Version>
     </PackageReference>
     <PackageReference Include="CountryData.Bogus">
-      <Version>3.63.0</Version>
+      <Version>3.72.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Graph">
-      <Version>4.10.0</Version>
+      <Version>4.24.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Identity.Client">
-      <Version>4.38.0</Version>
+      <Version>4.43.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <!--
@@ -25,7 +25,7 @@
 			-->
       <Version>6.2.13</Version>
     </PackageReference>
-    <PackageReference Include="Microsoft.UI.Xaml" Version="2.7.0" />
+    <PackageReference Include="Microsoft.UI.Xaml" Version="2.7.1" />
     <PackageReference Include="Newtonsoft.Json">
       <Version>13.0.1</Version>
     </PackageReference>
@@ -35,10 +35,10 @@
     <PackageReference Include="System.Security.Cryptography.ProtectedData">
       <Version>6.0.0</Version>
     </PackageReference>
-    <PackageReference Include="Uno.Core" Version="3.0.0" />
-    <PackageReference Include="Uno.UI" Version="3.11.6" />
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="6.0.0" />
+    <PackageReference Include="Uno.UI" Version="4.1.9" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="5.0.0" />
+    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.1.9" />
   </ItemGroup>
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
