--- a/UI/UnoSQLiteOneDriveInvoiceSample/Demo/Demo/Demo.iOS/Demo.iOS.csproj
+++ b/UI/UnoSQLiteOneDriveInvoiceSample/Demo/Demo/Demo.iOS/Demo.iOS.csproj
@@ -120,10 +120,10 @@
       <Version>1.0.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Graph">
-      <Version>4.10.0</Version>
+      <Version>4.24.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Identity.Client">
-      <Version>4.38.0</Version>
+      <Version>4.43.0</Version>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>13.0.1</Version>
@@ -131,15 +131,16 @@
     <PackageReference Include="SQLiteNetExtensions">
       <Version>2.1.0</Version>
     </PackageReference>
-    <PackageReference Include="Uno.UI" Version="3.11.6" />
-    <PackageReference Include="Uno.UI.RemoteControl" Version="3.11.6" Condition="'$(Configuration)'=='Debug'" />
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
-    <PackageReference Include="Uno.Extensions.Logging.OSLog " Version="1.1.0" />
+    <PackageReference Include="Uno.UI" Version="4.1.9" />
+    <PackageReference Include="Uno.UI.RemoteControl" Version="4.1.9" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.1.9" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
+    <PackageReference Include="Uno.Extensions.Logging.OSLog " Version="1.0.1" />
     <PackageReference Include="Bogus">
-      <Version>33.1.1</Version>
+      <Version>34.0.2</Version>
     </PackageReference>
     <PackageReference Include="CountryData.Bogus">
-      <Version>3.63.0</Version>
+      <Version>3.72.0</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
